@@ -3,14 +3,24 @@ Hash: SHA256
 
 DIST laughlin-backgrounds-13.92.0-1.fc14.src.rpm 30762033 RMD160 b3560561078090de12e736ade2d61448cd29f13a SHA1 a06382e80d5729ea43cf22aab574af9a2f3c572a SHA256 4788f7e01f072050a1cebf8e32193c092938668a3493af72171972a963b25f34
 DIST laughlin-backgrounds-14.1.0-3.fc15.src.rpm 52687935 RMD160 b5e86a003715775349603bdfca38d613f7ecfa83 SHA1 3f81a95684e07cec54601c9920376ad2d77f1c4e SHA256 327f4d722407a17e398312216d724caba360bf5fdb871be61246b53c96d3fba7
-EBUILD laughlin-backgrounds-13.92.0.1.ebuild 1062 RMD160 0820cd74c92957b2c07e53aecdc53f044043ef54 SHA1 a7f9667c50f7df52ca2b57b71dfe7520e1dfc520 SHA256 e670dd349a52bf826a1ab9ad481af921dc1e8042727d0a4d104bf3217ca5d354
+EBUILD laughlin-backgrounds-13.92.0.1.ebuild 1210 RMD160 27745c3a15fd5f56e8ad82e30467db59442022f8 SHA1 edaeb8c0b76d54fe6b5963f3250a1a02f720517d SHA256 f63a82d6d9c62599767fdd1f99cdc1631a845e54a5c42bf8ffefe89783bfd978
 EBUILD laughlin-backgrounds-14.1.0.3.ebuild 1058 RMD160 cc4e487a38410dd0e0c285ac4bfb200f6ec4dd86 SHA1 23929184635ff42ca5d927d64dd29a367b0eab9d SHA256 3385117e1e5a589fe7b50de98e69b650c4c25d2efdb6bd977ac5063f4566abe2
-MISC ChangeLog 764 RMD160 3ad8f9be844448eb157814174d241ff6fc460fb5 SHA1 65d686f7f25cf37e19ff8cbe94ff1359eba9f5a5 SHA256 ecc792c5dfdd338940897ddbc74f9b8cda54545fd3140c886ef7f14b59cc6a9c
+MISC ChangeLog 966 RMD160 e4080dd4edbae601c55c5055d0e87a1f51e936a5 SHA1 582de08cbba2702bb9e9146d3563f8be28806ff9 SHA256 10712ab643e28aff83bb9ce12d027853582ee1679ddc0fe9bd8d56b9ccc205f4
 MISC metadata.xml 210 RMD160 d62fe1b7fcdb6ed1cf8f29606f11005f72052018 SHA1 c2d95873b2490997439036d93c54c9452c1ed0b1 SHA256 033e97715bc19256fb7c105f739eeb5d7e58c4556fdb08face36c7270ce0c82a
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAk8hZEMACgkQodBTJSDyo66MGAD5AWJeQdVoTcXJT05tU7nMdcUl
-uPLLra0amVSSZ92CRCwA/0fXMtUVezBpaEFlFa/2+7U/emFrDuTljEqdz3BPHBPG
-=fyX2
+iQIcBAEBCAAGBQJP4engAAoJEF0huFKJUZL59pEP/3o+2PLGwdMQB0xrFfwLTJLf
+5gVE9o4rBsC3OqTX3Q6I18l0Q0w8V9PcTxOLna2+c9OULFptuLtmpd3xUAzyBaN/
+QT0OWfsaH7POv53wHrpdp7wP+NEyUGXhiHxTeZMDyq0GA8VrgwIYSmf8dW9gDduw
+wsaCk9OFL1Sx9nCdvcakIN4+KElQpGjRy6IPKouOWKqoEIDKA5BzTLAkNQZFxaf1
+yt5hEIgcKCUYBfy/R+EaGOyI4niqNeZhhI3ICRXX3luCKxYml7fl+ciD03RS+/vD
+ol1JaxMDyDZkyLAxWNHdWumKOUhpV8IzpOqceLDmJyUbo4D8PQOOQL8iZIoChyWT
+PRmKMW8ew9uFAN6uAVtwAIL7fd7HUAbYjJqjD9MLmryEffULNceWMSezcrs8fhhX
+sn+Kw2yOWdARsc3sm2SenVNpnXaNbb89Uc1vrsqs0IFADpxns44fe3lJ0fI6iJJN
+9un7bX5K8pFEYzmxydXN/dedft0XqktB6318zQKL+kZ0pYXBJ79T9x/qZyA3wU2g
+K1965+nYJ2ZxXuiBmBpr23LxyoGNDGhwjRptbd4263zcTk9AGg4BsOuux0KRD74W
+QhaOuqOLwlmZkmNgJJwwm6SjWmKx/bTAr08xLhbSax2D/Ch6erqU8a/UZGMEThgH
+1wuLVqvHYx/zJ5pM4gcM
+=vX6F
 -----END PGP SIGNATURE-----
