@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/laughlin-backgrounds/laughlin-backgrounds-13.92.0.1.ebuild,v 1.1 2011/03/09 22:22:57 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/laughlin-backgrounds/laughlin-backgrounds-13.92.0.1.ebuild,v 1.2 2012/06/20 15:18:47 xarthisius Exp $
 
 EAPI=3
 
@@ -14,7 +14,9 @@ MY_P="${PN}-$(get_version_component_range 1-3)"
 DESCRIPTION="Fedora official background artwork"
 HOMEPAGE="https://fedoraproject.org/wiki/F14_Artwork"
 
-SRC_URI="mirror://fedora-dev/${SRC_PATH}/${PN}-$(replace_version_separator 3 -).fc${FEDORA}.src.rpm"
+# No longer available at mirrors
+#SRC_URI="mirror://fedora-dev/${SRC_PATH}/${PN}-$(replace_version_separator 3 -).fc${FEDORA}.src.rpm"
+SRC_URI="http://dev.gentoo.org/~xarthisius/distfiles/${PN}-$(replace_version_separator 3 -).fc${FEDORA}.src.rpm"
 
 LICENSE="CCPL-Attribution-ShareAlike-2.0"
 KEYWORDS="~amd64"
