@@ -1,6 +1,11 @@
 # ChangeLog for x11-themes/laughlin-backgrounds
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/laughlin-backgrounds/ChangeLog,v 1.3 2012/01/26 14:33:34 tomka Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/laughlin-backgrounds/ChangeLog,v 1.4 2012/06/20 15:18:47 xarthisius Exp $
+
+  20 Jun 2012; Kacper Kowalik <xarthisius@gentoo.org>
+  laughlin-backgrounds-13.92.0.1.ebuild:
+  Point SRC_URI to rpm hosted in my devspace since it is no longer available at
+  upstream's mirrors
 
   26 Jan 2012; Thomas Kahle <tomka@gentoo.org>
   laughlin-backgrounds-14.1.0.3.ebuild:
